2018-03-23    <cerebrum@gagarin.uit.no>

	* import_tlf.py (process_telefoni): the script will now continue with next user, if a username is encountered in the import file (from cmg) and is missing in the database. until now, the script would crash with a keyerror

2018-03-14    <cerebrum@gagarin.uit.no>

	* export_ad.py (ad_export.build_xml): This script will now also
	export new contact data from the account object (and not only on the
	person object). Additionally, the following check is performed: if
	the account objects containts a new contact value, but from the
	same source and type as the person object, the account object
	contact value will superseede the value from the person object.
	in effect the value from the person oject will NOT be exported.
	(ad_export.build_xml): removed debug lines

2018-03-02    <cerebrum@gagarin.uit.no>

	* import_FS.py (rem_old_aff): Fagpersons from FS are to lose their
	fagperson affiliation the same day they are missing in import data
	from FS.

2018-02-27    <cerebrum@cleomedes.uit.no>

	* import_FS.py (register_cellphone): all phonenumbers are to have the prefix +<country_code>

2018-02-20    <cerebrum@gagarin.uit.no>

	* update_displayname.py (main): updated url to aliases to jep2n1.uit.no

2018-02-16  Karen   <cerebrum@cleomedes.uit.no>

    * ad_export_autogroups_undervisning.py: Made changes that where necessary for this script to work 
    correctly with new BAS: Updated search terms to reflect changes in the database to group names, and 
    adjusted code to handle these changes. Added functionality to filter away undervisningsenhet groups 
    that are not from this or next semester. Studieprogram with no members are now filtered away. 

2018-02-14    <cerebrum@cleomedes.uit.no>

	* process_systemx.py (send_mail): removed the debug flag which prevented emails from being sent

2018-02-12    <cerebrum@cleomedes.uit.no>

	* process_systemx.py (send_mail): whenever a new user is