@@ -1,3 +1,7 @@
+2018-04-05  Karen   <cerebrum@gagarin.uit.no>
+
+    * export_cristin.py: Commented out unnecessary prints.
+
 2018-03-23    <cerebrum@gagarin.uit.no>
 
 	* import_tlf.py (process_telefoni): the script will now continue with next user, if a username is encountered in the import file (from cmg) and is missing in the database. until now, the script would crash with a keyerror
